--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -37,7 +37,7 @@ h5{
 
 .upload-console-drop{
 	height: 200px;
-	border:2px dashed #ccc;
+	border:2px dashed #000;
 	line-height: 200px;
 	color: #ccc;
 	text-align: center;
@@ -55,14 +55,14 @@ h5{
 	background: #eee;
 	padding: 3px;
 	border-radius: 3px;
-	box-shadow: inset 0 1px 3px rgba(0,0,0,.2)
+	box-shadow: inset 0 1px 3px rgba(0,0,0,.2);
 	box-sizing:border-box;
 	margin-bottom: 20px;
 }
 .bar-fill{
 	height: 30px;
 	display: block;
-	background: cornflowerblue;
+	background: yellow;
 	width: 0;
 	border-radius: 3px;
 	-webkit-transition:width 0.8s ease;
