--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -8,6 +8,7 @@ h3,
 h4,
 h5{
 	font-weight: 400;
+	color: #eee;
 }
 
 .hidden{
@@ -30,7 +31,7 @@ h5{
 .upload-console-header{
 	padding:0 0 20px 0;
 	margin: 0;
-	border-bottom:2px solid #eee;
+	border-bottom:2px solid #000;
 	font-weight: 600;
 	margin-bottom:20px;
 }
