--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -23,7 +23,6 @@ h5{
 }
 
 .upload-console{
-	background-image: url('../wallpaper.png');
 	border:2px solid #eee;
 	padding:20px;
 }
@@ -31,7 +30,7 @@ h5{
 .upload-console-header{
 	padding:0 0 20px 0;
 	margin: 0;
-	border-bottom:2px solid #000;
+	border-bottom:2px solid #eee;
 	font-weight: 600;
 	margin-bottom:20px;
 }
