--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -37,7 +37,7 @@ h5{
 
 .upload-console-drop{
 	height: 200px;
-	border:2px dashed #000;
+	border:2px dashed #ccc;
 	line-height: 200px;
 	color: #ccc;
 	text-align: center;
@@ -52,10 +52,10 @@ h5{
 }
 .bar{
 	width: 100%;
-	background: #eee;
+	background: #222;
 	padding: 3px;
 	border-radius: 3px;
-	box-shadow: inset 0 1px 3px rgba(0,0,0,.2);
+	box-shadow: inset 0 1px 3px rgba(37, 0, 0, 0.2);
 	box-sizing:border-box;
 	margin-bottom: 20px;
 }
