--- a/test2/css/style.css
+++ b/test2/css/style.css
@@ -9,6 +9,7 @@ body {
     position: absolute;
 
 }
+
 .blacc{
     color: #000000;
 }
@@ -147,9 +148,11 @@ input,
 .secret {
     color: #4e4e4e;
 }
+/*
 html{
     overflow: -moz-hidden-unscrollable;
 }
+*/
 .entertainment, .social, .dev {
     display: inline-block;
     background-color: #000000;
@@ -168,9 +171,11 @@ html{
     color: #535353;
     font-size: 16px;
 }
+/*
 body{
   background: rgba(0,0,0,0.9);
 }
+*/
 form{
   position:absolute;
   top: 50%;
