--- a/test2/css/style.css
+++ b/test2/css/style.css
@@ -29,14 +29,17 @@ h1 {
 }
 
 input {
-    color: #D8d8d8;
-    background-color: #161616;
-    width: 700px;
+    color: #000000;
+    width: 80%;
+    
+    margin-top: 0%;
     text-align: center;
     height: 50px;
     font-size: 17px;
 }
-
+.fileupload{
+    margin-bottom: 100px;
+}
 
 input::placeholder {
     text-align: center;
@@ -117,11 +120,12 @@ button:hover {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+/*
 input,
 .go {
     border: none;
     outline: none;
-}
+}*/
 .se_btn {
     width: 50px;
     height: 50px;
