--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -88,6 +88,7 @@ colorlinked{
 .upload-console-upload{
 	border-bottom:2px solid #ccc;
 	color: yellow;
+	background-color: teal;
 	margin-bottom: 10px;
 	padding-bottom: 10px;
 }
