--- a/test2/css/global.css
+++ b/test2/css/global.css
@@ -29,7 +29,7 @@ h5{
 	margin-right: 10%;
 	margin-top: 50px;
 	border:2px solid #eee;
-	background-color: #333;
+	background-color: #29161c;
 	padding:20px;
 }
 
@@ -45,18 +45,18 @@ h5{
 	height: 200px;
 	border:2px dashed #ccc;
 	line-height: 200px;
-	background-color: #333;
+	background-color: #29161c;
 	color: #ccc;
 	text-align: center;
 	margin-bottom: 20px;
 }
 .upload-console-drop.drop{
-	border-color: #222;
+	border-color: #29161c;
 	color:#222;
 }
 
 .colorlinked{
-	color:yellow;
+	color:#D1CC73;
 }
 
 .upload-console-body{
@@ -64,7 +64,7 @@ h5{
 }
 .bar{
 	width: 100%;
-	background: #222;
+	background: #29161c;
 	padding: 3px;
 	border-radius: 3px;
 	box-shadow: inset 0 1px 3px rgba(37, 0, 0, 0.2);
@@ -74,7 +74,7 @@ h5{
 .bar-fill{
 	height: 30px;
 	display: block;
-	background: #aaa;
+	background: #874A5B;
 	width: 0;
 	border-radius: 3px;
 	-webkit-transition:width 0.8s ease;
@@ -87,7 +87,7 @@ h5{
 }
 .upload-console-upload{
 	border-bottom:2px solid #ccc;
-	color: yellow;
+	color: #89864C;
 	margin-bottom: 10px;
 	padding-bottom: 10px;
 }
