--- a/test2/css/style.css
+++ b/test2/css/style.css
@@ -29,7 +29,8 @@ h1 {
 }
 
 input {
-    color: #000000;
+    color: #BE8896;
+    background-color: #29161c;
     width: 80%;
     
     margin-top: 0%;
