colors final soon

--- a/test2/css/style.css
+++ b/test2/css/style.css
@@ -30,7 +30,7 @@ h1 {
 
 input {
     color: #BE8896;
-    background-color: #29161c;
+    background-color: #492832;
     width: 80%;
     
     margin-top: 0%;
