--- a/test2/css/style.css
+++ b/test2/css/style.css
@@ -30,7 +30,7 @@ h1 {
 
 input {
     color: #BE8896;
-    background-color: #492832;
+    background-color: #29161c;
     width: 80%;
     
     margin-top: 0%;
@@ -40,6 +40,7 @@ input {
 }
 .fileupload{
     margin-bottom: 5px;
+    background-color: #492832;
 }
 
 input::placeholder {
